[gd_scene load_steps=2 format=3 uid="uid://ydns5n7jbjna"]

[ext_resource type="Script" path="res://EasyLeaderboard.gd" id="1_8bv17"]

[node name="EasyLeaderboard" type="Node"]
script = ExtResource("1_8bv17")

[node name="GetLeaderboardRequest" type="HTTPRequest" parent="."]

[node name="SubmitScoreRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="GetLeaderboardRequest" to="." method="_on_get_leaderboard_request_request_completed"]
[connection signal="request_completed" from="SubmitScoreRequest" to="." method="_on_submit_score_request_request_completed"]
